______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.186:

* Changed email address of Ernst de Haan to ernst.dehaan@nl.wanadoo.com.

* Removed some TODOs done.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.185:

* XINS/Java Server Framework:
  - Fixed bug that existed since 0.179. All standard result codes were from
    then on supposed to start with an underscore. However, there were still
    references to the 'InternalError' result code. This has now been fixed to
    '_InternalError'.
  - Changed FunctionResult class to improve documentation and style slightly.

* XINS/Java Common Library:
  - Fixed a bug in FastStringBuffer where the method append(char[]) did not
    update the length of the FastStringBuffer.
    This bug existed since 0.8.
  - SF.net bug #973251: Fixed a bug in HexConverter where the toHexString(...)
    methods overwrote the content of the FastStringBuffer when it was not
    empty.
    This bug existed since 0.72.
  - Added the missing static toString(...) methods for the Int8 type.
    This bug existed since 0.56.
  - The fromString method of EnumType now returns an Item object instead of a
    String.
  - The toString method of EnumType now requires an Item object instead of a
    String.
  - Added the _list type.
  - Added the _set type.
  - Added a toString(Object) method to the types int8, int16, int32 and int64.
  - Improved log message generated when a queue time-out occurs in the Doorman
    class.

* Specification:
  - Added the elements int8, int16, int32 and int64 to the type XML file.
    The elements accept the min and max attributes.
  - Removed the value attribute for the result codes. The name attribute will
    be used for XINS 1.0.

* Generated specification documentation:
  - Fixed a bug that did not generate the link to the environment with the
    new directory structure.